# syllables

./: .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
docs/: architecture.md  heuristics.md
scripts/: build_reference.py  explain.py  fetch_kaikki.py  infer.py  plot_curves.py  train.py
syllables/: __init__.py  data.py  harness.py  heuristics.py  model.py
syllables/lexicon/: reference.tsv.xz
syllables/weights/: model.npz
tests/: test_harness.py  test_heuristics.py
