[project]
name = "syllables"
version = "0.1.0"
description = "Conservative English syllable counting for messy real-world text — exact count or honest abstention."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.2",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["syllables"]
artifacts = ["syllables/weights/model.npz"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "optax>=0.2.8",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"  # tracks requires-python = ">=3.10"
# line-length: ruff default (88)

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, bugbear — conventional and
# low-noise for this codebase's terse style.
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# __init__.py re-exports the public API for `from syllables import …`.
"syllables/__init__.py" = ["F401"]
